[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernox"
version = "0.1.0"
description = "AI-Powered Security Automation CLI for ethical hackers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kernox Contributors" }]
keywords = ["security", "pentest", "ai", "automation", "cli", "nmap", "ffuf", "sqlmap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "cryptography>=41.0.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    "anthropic>=0.25.0",
    "ollama>=0.2.0",
    "reportlab>=4.0.0",
]

[project.scripts]
kernox = "kernox.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kernox*"]
